# greeter-rust

./: Cargo.toml  README.md  build.rs
proto/: greeter.proto
src/: client.rs  server.rs
